# client_wrapper

./: .gitignore  Dockerfile  Makefile  README.md  car.py  example.py  pyproject.toml
.github/actions/validator_pypi_publish/: action.yml  add_build_prefix.py
.github/workflows/: pr_qc.yml  release.yml
client_wrapper/: __init__.py  custom_judge.py  env.py  protocols.py  wrapper_funcs.py
client_wrapper/classes/: judge_result.py
client_wrapper/decorators/: custom_judge.py  llm.py
client_wrapper/processors/: risk_evaluation_processor.py  test_processor.py
guardrails_sim_client/: __init__.py  wrapper_funcs.py
guardrails_simlab_client/: __init__.py  env.py  protocols.py
guardrails_simlab_client/decorators/: custom_judge.py  llm.py
guardrails_simlab_client/processors/: risk_evaluation_processor.py  test_processor.py
