[project]
name = "guardrails-ai-simlab-client"
version = "0.1.1"
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}

description = "client wrapper for usage with llm experiment"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "requests>=2.31.0"
]
